# 2026Spring-25326011-Lab1

./: .gitignore  .qmake.stash  ADMIN_WIDGET_PROGRESS.md  ALL_FIXES.md  BUILD.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CMakeLists.txt  COMPILE_ERROR_FIX.md  COMPILE_ERROR_SUMMARY.md  COMPILE_FIX.md  COMPILE_FIX_SPECIAL_COPLETS.md  COMPLETE_FEATURES.md  CRITICAL_FIXES.md  DATA_BACKUP_PLAN.md  FINAL_FIX.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENTS.md  INSTALL.md  Makefile  Makefile.Debug  Makefile.Release  NEW_FEATURES_PLAN.md  NEW_GAME_INPUT_FIX.md  NEXT_STEPS.md  NO_PUNCTUATION_NEEDED.md  POEM_INPUT_FIX.md  POEM_PARSING_FIX.md  POEM_STRUCTURE_EXPLANATION.md  QUESTION_BANK_FIX.md  QUESTION_MANAGEMENT_IMPROVEMENTS.md  README.md  REALTIME_DISPLAY.md  RUNTIME_FIX.md  SPECIAL_COUPLET_FEATURE.md  TROUBLESHOOTING.md  build.bat  build_log.txt  (+4 more)
.codeartsdoer/skills/managing-sdd-design-markdown/: design-principles.md  design_template.md
.codeartsdoer/skills/managing-sdd-spec-markdown/: ears-format.md  spec_template.md
.codeartsdoer/skills/managing-sdd-tasks-markdown/: tasks_template.md
AppScope/: app.json5
debug/: object_script.guess_poetry_game.Debug
release/: moc_admin_widget.cpp  moc_game_widget.cpp  moc_main_window.cpp  object_script.guess_poetry_game.Release  qrc_resources.cpp
resources/: styles.qss
src/data/: file_storage.cpp  file_storage.h  poem_bank.cpp  poem_bank.h  question_bank.cpp  question_bank.h
src/logic/: feedback_processor.cpp  feedback_processor.h  game_controller.cpp  game_controller.h  validator.cpp  validator.h
src/models/: feedback.cpp  feedback.h  game_state.cpp  game_state.h  poem.cpp  poem.h  question.cpp  question.h
src/ui/: admin_widget.cpp  admin_widget.h  game_widget.cpp  game_widget.h  main_window.cpp  main_window.h
(+14 files in other folders)
